--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -45,6 +45,7 @@
                                 [listaCriterios]="listaCriterios"
                                 [solicitudPagoFaseFacturaDescuento]="this.solicitudPagoFaseFactura.solicitudPagoFaseFacturaDescuento"
                                 [valorNetoGiro]="listData.valorNetoGiro"
-                                [solicitudPago]="solicitudPago">
+                                [solicitudPago]="solicitudPago"
+                                [esVerDetalle]="esVerDetalle">
     </app-form-descuentos-gog>
 </section>
