--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/soporte-orden-giro-gog/soporte-orden-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/soporte-orden-giro-gog/soporte-orden-giro-gog.component.html
@@ -1,40 +1,49 @@
-<form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+<ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
     <mat-card class="shipping-card">
         <mat-card-content style="text-align: left;">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row">
-                        <div class="pr-1">
-                            <label class="label-left" for="urlSoporte" [ngClass]="{
-                                'color-secondaryColor':
-                                  (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
-                                  (addressForm.get('urlSoporte').invalid && estaEditando)
-                              }">URL con soporte</label>
-                        </div>
-                        <div class="col">
-                            <mat-form-field class="full-width">
-                                <input matInput #urlSoporte type="text" formControlName="urlSoporte" required>
-                            </mat-form-field>
-                            <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte de
-                                la orden de giro</span>
-                        </div>
-                        <span class="icon-incompleto">
-                            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                matTooltip="Debe ingresar la información en el campo para continuar"
-                                matTooltipClass="info-tooltip" *ngIf="
-                              (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
-                              (addressForm.get('urlSoporte').invalid && estaEditando)
-                              " />
-                        </span>
-                    </div>
-                </div>
-            </div>
+            <p><b>URL con soporte: </b> {{ addressForm.get( 'urlSoporte' ).value }} </p>
         </mat-card-content>
     </mat-card>
-    <div class="text-center mb-2em">
-        <button mat-button color="warn" class="btn-guardar" type="submit">
-            <img src="assets/img/icon/guardar.svg" alt="Regresar">
-        </button>
-    </div>
-</form>
+</ng-container>
+<ng-template #noEsVerDetalle>
+    <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+        <mat-card class="shipping-card">
+            <mat-card-content style="text-align: left;">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="pr-1">
+                                <label class="label-left" for="urlSoporte" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
+                                      (addressForm.get('urlSoporte').invalid && estaEditando)
+                                  }">URL con soporte</label>
+                            </div>
+                            <div class="col">
+                                <mat-form-field class="full-width">
+                                    <input matInput #urlSoporte type="text" formControlName="urlSoporte" required>
+                                </mat-form-field>
+                                <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte de
+                                    la orden de giro</span>
+                            </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                  (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
+                                  (addressForm.get('urlSoporte').invalid && estaEditando)
+                                  " />
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </mat-card-content>
+        </mat-card>
+        <div class="text-center mb-2em">
+            <button mat-button color="warn" class="btn-guardar" type="submit">
+                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+            </button>
+        </div>
+    </form>
+</ng-template>
