--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/observaciones-orden-giro-gog/observaciones-orden-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/observaciones-orden-giro-gog/observaciones-orden-giro-gog.component.html
@@ -1,41 +1,55 @@
-<form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-    <div class="d-flex align-items-center mtop">
-        <div class="text-area-quill izqTitle" [ngClass]="{
-            'color-secondaryColor':
-            (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-            (addressForm.get('observaciones').invalid && estaEditando)
-          }">
-            <label for="observaciones" class="text-area-quill--label" [ngClass]="{
-                                'colorMainColor':
-                                  !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                                  (addressForm.get('observaciones').invalid && estaEditando))
-                              }">Observaciones a la orden de giro</label>
-            <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required 
-                (onContentChanged)="maxLength($event, 3000)" formControlName="observaciones" #observaciones></quill-editor>
+<ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+    <mat-card class="shipping-card">
+        <mat-card-header class="header-card header-card--margin">
+            <mat-card-title class="header-card--text">
+                Observaciones a la orden de giro
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="text-align: left;">
+            <div [innerHTML]="addressForm.get( 'observaciones' ).value !== null ? addressForm.get( 'observaciones' ).value : ''"></div>
+        </mat-card-content>
+    </mat-card>
+</ng-container>
+<ng-template #noEsVerDetalle>
+    <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+        <div class="d-flex align-items-center mtop">
+            <div class="text-area-quill izqTitle" [ngClass]="{
+                'color-secondaryColor':
+                (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                (addressForm.get('observaciones').invalid && estaEditando)
+              }">
+                <label for="observaciones" class="text-area-quill--label" [ngClass]="{
+                                    'colorMainColor':
+                                      !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                      (addressForm.get('observaciones').invalid && estaEditando))
+                                  }">Observaciones a la orden de giro</label>
+                <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required 
+                    (onContentChanged)="maxLength($event, 3000)" formControlName="observaciones" #observaciones></quill-editor>
+            </div>
+            <span class="contador miles" *ngIf="addressForm.get( 'observaciones' ).value">
+                {{ 3000 - (textoLimpio(observaciones.quillEditor,3000)) }}
+            </span>
+            <span class="contador miles" *ngIf="addressForm.get( 'observaciones' ).value === null">
+                3000
+            </span>
+            <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                  (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                  (addressForm.get('observaciones').invalid && estaEditando)
+                  "
+                />
+              </span>
         </div>
-        <span class="contador miles" *ngIf="addressForm.get( 'observaciones' ).value">
-            {{ 3000 - (textoLimpio(observaciones.quillEditor,3000)) }}
-        </span>
-        <span class="contador miles" *ngIf="addressForm.get( 'observaciones' ).value === null">
-            3000
-        </span>
-        <span class="icon-incompleto">
-            <img
-              class="icon-incompleto--img"
-              src="assets/img/icon/incompleto.svg"
-              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
-              *ngIf="
-              (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-              (addressForm.get('observaciones').invalid && estaEditando)
-              "
-            />
-          </span>
-    </div>
-    <button mat-button color="warn" class="btn-guardar"
-        type="submit">
-        <img src="assets/img/icon/guardar.svg" alt="Guardar">
-    </button>
-</form>
+        <button mat-button color="warn" class="btn-guardar"
+            type="submit">
+            <img src="assets/img/icon/guardar.svg" alt="Guardar">
+        </button>
+    </form>
+</ng-template>
