--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/verificar-seguimiento/verificar-seguimiento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/verificar-seguimiento/verificar-seguimiento.component.html
@@ -195,9 +195,11 @@
 
     ¿Tiene observaciones al registro del seguimiento diario?: <span>{{ 'Si' }}</span>
     <br>
-    <p>
-      {{ seguimiento.observacionDevolucion.observaciones }}
-    </p>
+      <section
+        
+        [innerHTML]="seguimiento.observacionDevolucion.observaciones"
+        style="margin-left: 2em"
+      ></section>
 
   </mat-card-content>
 </mat-card>
