--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
@@ -87,7 +87,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-soporte-orden-giro-gog [solicitudPago]="solicitudPago"></app-soporte-orden-giro-gog>
+            <app-soporte-orden-giro-gog [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"></app-soporte-orden-giro-gog>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
