--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/tabla-verificar-orden-giro/tabla-verificar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/tabla-verificar-orden-giro/tabla-verificar-orden-giro.component.html
@@ -13,12 +13,12 @@
 
     <ng-container matColumnDef="fechaGeneracion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de generación de orden de giro </th>
-      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaGeneracion | date: 'dd/MM/yyyy' }} </b> </td>
+      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacionFinanciera }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroOrden">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
-      <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroOrden }} </td>
+      <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitudOrdenGiro }} </td>
     </ng-container>
 
     <ng-container matColumnDef="modalidad">
@@ -33,7 +33,7 @@
 
     <ng-container matColumnDef="estadoVerificacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verificación </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoVerificacion }} </td>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadaVerificacionOrdenGiro ? element.estadoNombre2 : element.estadoNombre }} </td>
     </ng-container>
   
     <ng-container matColumnDef="gestion">
@@ -44,20 +44,23 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verificarOrdenGiroExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadaVerificacionOrdenGiro"
+                        [routerLink]="[ 'verificarOrdenGiroExpensas', element.solicitudPagoId ]">
                         Verificar orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'editarOrdenGiroExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro"
+                        [routerLink]="[ 'editarOrdenGiroExpensas', element.solicitudPagoId ]">
                         Ver detalle/Editar
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro && element.registroCompletoVerificar === true"
                         (click)="openDialogEnviarAprobacion()">
                         Enviar para aprobación orden de giro
                 </button>
@@ -65,19 +68,24 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verDetalleExpensas', element.id ]">
+                        *ngIf=" element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadaVerificacionOrdenGiro
+                                && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro"
+                        [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
                         Ver detalle
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro && element.registroCompletoVerificar === true">
                         Devolver orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf=" element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadaVerificacionOrdenGiro
+                                && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro">
                         Descargar orden de giro
                 </button>
             </ng-container>
@@ -85,20 +93,23 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verificarOrdenGiro', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadaVerificacionOrdenGiro"
+                        [routerLink]="[ 'verificarOrdenGiro', element.solicitudPagoId ]">
                         Verificar orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'editarOrdenGiro', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro"
+                        [routerLink]="[ 'editarOrdenGiro', element.solicitudPagoId ]">
                         Ver detalle/Editar
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro && element.registroCompletoVerificar === true"
                         (click)="openDialogEnviarAprobacion()">
                         Enviar para aprobación orden de giro
                 </button>
@@ -106,19 +117,24 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verDetalle', element.id ]">
+                        *ngIf=" element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadaVerificacionOrdenGiro
+                                && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro"
+                        [routerLink]="[ 'verDetalle', element.solicitudPagoId ]">
                         Ver detalle
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro && element.registroCompletoVerificar === true">
                         Devolver orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf=" element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadaVerificacionOrdenGiro
+                                && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoVerificacionOrdenGiro">
                         Descargar orden de giro
                 </button>
             </ng-template>
